5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1756_1183.log
== TEST (2019-05-29 13:20:13) 
-- CODE:
n= eval(int(input(":")))
m= ([n] != n*-1
print(m)
-- ERROR:
File "XXXX", line 3
    print(m)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:20:33) 
-- CODE:
n= eval(int(input(":")))
m ==([n] != n*-1
print(m)
-- ERROR:
File "XXXX", line 3
    print(m)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:20:53) 
-- CODE:
n= eval(int(input(":")))
m=([n] != [n]*-1
print(m)
-- ERROR:
File "XXXX", line 3
    print(m)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:21:04) 
-- CODE:
n= eval(int(input(":")))
m=([n]!=[n]*-1)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n= eval(int(input()))
ValueError: invalid literal for int() with base 10: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:21:20) 
-- CODE:
n= eval(int(input(":")))
m=([n]!=[n]*-1)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n= eval(int(input()))
ValueError: invalid literal for int() with base 10: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:23:20) 
-- CODE:
n= eval(int(input(":")))
if([n] !=(n*-1))
print(n)
-- ERROR:
File "XXXX", line 2
    if([n] !=(n*-1))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:23:25) 
-- CODE:
n= eval(int(input(":")))
if([n] !=(n*-1)):
print(n)
-- ERROR:
File "XXXX", line 3
    print(n)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:23:31) 
-- CODE:
n= eval(int(input(":")))
if([n] !=(n*-1)):
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n= eval(int(input()))
ValueError: invalid literal for int() with base 10: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:24:24) 
-- CODE:
n= array(eval(int(input(":"))))
if([n] !=(n*-1)):
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n= array(eval(int(input())))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:24:40) 
-- CODE:
from numpy import*
n= array(eval(int(input(":"))))
if([n] !=(n*-1)):
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:25:49) 
-- CODE:
from numpy import*
n= array(eval(int(input(":"))))
if([n] !=([n]*-1)):
	print(n)
-- EXECUTION TIME:
0.50754
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 2, in <module>
    n= array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:25:49) 
-- CODE:
from numpy import*
n= array(eval(int(input(":"))))
if([n] !=([n]*-1)):
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:26:04) 
-- CODE:
from numpy import*
n= array((int(input(":"))))
if([n] !=([n]*-1)):
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:26:22) 
-- CODE:
from numpy import*
n= array((int(input(":"))))
if([n] !=([n]*-1)):
	print(n)
-- EXECUTION TIME:
0.350801
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 2, in <module>
    n= array((int(input())))
ValueError: invalid literal for int() with base 10: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:26:22) 
-- CODE:
from numpy import*
n= array((int(input(":"))))
if([n] !=([n]*-1)):
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
